--- a/styles/main.css
+++ b/styles/main.css
@@ -1,21 +1,52 @@
-.fish_card {
-    
+/*.Martins__Aquarium {
+  display:flex;
+  justify-content: center;
+  align-content: center;
+  
+}
+
+
+.fish_card1 {
+    display: flexbox;
+    justify-content: center ;
     
 }
 
-.fishList {
+.fishList1 {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    margin-right: 20em;
     
+    justify-content: space-evenly;
+   
+    
+}
+
+.fishList2 {
+    display: flex;
+    flex-wrap: wrap;
+    
+    justify-content: space-evenly;
+   
+    
+}
+
+.fishList3 {
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: space-evenly;
+   
+    
+}
+
+.tank_care {
+    justify-content: center;
 }
 
 .tank__care__title {
     display: flex;
     justify-content: right;
-    margin-right: 5em;
+   
 
 }
 
@@ -23,3 +54,61 @@
     display: flex;
     justify-content: center;
 }
+
+.fish-container {
+    display:flex;
+    justify-content: space-evenly;
+    align-content: center;
+    flex-direction: column;
+}
+
+.fish__name {
+    display:flex;
+    justify-content: center;
+}
+
+.fish__species {
+    display:flex;
+    justify-content: center;
+}
+
+.fish__length {
+    display: flex;
+    justify-content: center;
+}
+
+.fish__location {
+    display:flex;
+    justify-content: center;
+}
+
+.fish__diet {
+    display:flex;
+    justify-content: center;
+}
+
+.locationsList {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    
+}
+*/
+.fish-container_and_fish_tips {
+    display: flex;
+    justify-content:space-between
+}
+
+.fish-container {
+    display:flex;
+    flex-direction:row;
+    flex-wrap: wrap
+}
+
+.tank__care {
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start
+}
+
