--- a/styles/main.css
+++ b/styles/main.css
@@ -94,15 +94,30 @@
     
 }
 */
-.fish-container_and_fish_tips {
+
+
+.main {
+    display:flex;
+}
+
+.Martins__Aquarium {
     display: flex;
-    justify-content:space-between
+    flex-wrap: wrap;
+}
+
+
+.fish_and_fish_tips {
+    display: flex;
+    
+    
+    
 }
 
 .fish-container {
     display:flex;
     flex-direction:row;
-    flex-wrap: wrap
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .tank__care {
@@ -112,3 +127,84 @@
     justify-content: flex-start
 }
 
+.fishList1 {
+    display:flex;
+    justify-content: center;
+    color: white;
+}
+
+.fishList2 {
+    display:flex;
+    justify-content: center;
+    color: white;
+}
+
+.fishList3 {
+    display:flex;
+    justify-content: space-evenly;
+    color: white;
+}
+
+.allFish {
+    display:flex;
+    flex-wrap: wrap;
+    background-color: rgb(20, 126, 161);
+    border: 4px solid rgb(71, 79, 78)
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+    background-color: lightgray;
+    border: 4px solid rgb(71, 79, 78)
+    
+}
+
+.locationsList {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    background-color: rgb(20, 126, 161);
+    border: 4px solid rgb(71, 79, 78)
+    
+}
+
+.tank__care__title {
+    display: flex;
+    justify-content: center;
+    font-size: 1.5em;
+    background-color: rgb(199, 214, 214);
+    border: 4px solid rgb(71, 79, 78)
+}
+
+.tank__care {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(20, 126, 161);
+    border: 4px solid rgb(71, 79, 78)
+    
+}
+
+.tipsList {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: beige;
+}
+
+.tips_card {
+    display: flex;
+    margin-top: 1.5em;
+    margin-bottom: 2em;
+    justify-content: space-between;
+}
+
+.body {
+    background-color: lightblue;
+}
+
+.locations_card {
+    color: white;
+}
